# project_tiv

./: README.md
tiv/: CMakeLists.txt
tiv/include/utility/: DataPathGenerator.hpp  ImageRecognitionManager.hpp  QualityChecker.hpp  SnippetExtractor.hpp  TextExtractionManager.hpp
tiv/src/: main.cpp
tiv/src/utility/: DataPathGenerator.cpp  ImageRecognitionManager.cpp  QualityChecker.cpp  SnippetExtractor.cpp  TextExtractionManager.cpp  histogram.cpp
